added some todos, fixed url defs for prod

--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="mx-auto text-center text-justify">
-          <img src="../assets/img/portrait.jpg" class="portrait mb-2">
+          <img [src]="baseHref + 'portrait.jpg'" class="portrait mb-2">
           <h1>Who am I?</h1>
           <p>Hi, my name is Zafer Dogan. I'm a 28 years old Software Engineer / Freelance Graphic Designer / Self-Taught Artist from Switzerland. Over the past ten years, I've had the opportunity
           to build up a wide arrange of skills due to different projects I was involved in. I'm now in my last semester at the HSR and am in-between fulltime jobs, which is why I've setup this
@@ -28,19 +28,19 @@
           <h1>What tools do I use?</h1>
           <div class="col-md-12">
             <div class="mx-auto text-center my-md-2 portrait-tool">
-              <img src="../assets/img/toolThumbs/photoshop.png">
-              <img src="../assets/img/toolThumbs/illustrator.png">
-              <img src="../assets/img/toolThumbs/indesign.png">
-              <img src="../assets/img/toolThumbs/aftereffects.png">
-              <img src="../assets/img/toolThumbs/premiere.png">
-              <img src="../assets/img/toolThumbs/animate.png">
-              <img src="../assets/img/toolThumbs/maya.jpg">
-              <img src="../assets/img/toolThumbs/blender.png">
-              <img src="../assets/img/toolThumbs/sketchup.png">
-              <img src="../assets/img/toolThumbs/webstorm.jpg">
-              <img src="../assets/img/toolThumbs/phpstorm.png">
-              <img src="../assets/img/toolThumbs/intellijidea.jpg">
-              <img src="../assets/img/toolThumbs/clion.jpg">
+              <img [src]="baseHref + 'toolThumbs/photoshop.png'">
+              <img [src]="baseHref + 'toolThumbs/illustrator.png'">
+              <img [src]="baseHref + 'toolThumbs/indesign.png'">
+              <img [src]="baseHref + 'toolThumbs/aftereffects.png'">
+              <img [src]="baseHref + 'toolThumbs/premiere.png'">
+              <img [src]="baseHref + 'toolThumbs/animate.png'">
+              <img [src]="baseHref + 'toolThumbs/maya.jpg'">
+              <img [src]="baseHref + 'toolThumbs/blender.png'">
+              <img [src]="baseHref + 'toolThumbs/sketchup.png'">
+              <img [src]="baseHref + 'toolThumbs/webstorm.jpg'">
+              <img [src]="baseHref + 'toolThumbs/phpstorm.png'">
+              <img [src]="baseHref + 'toolThumbs/intellijidea.jpg'">
+              <img [src]="baseHref + 'toolThumbs/clion.jpg'">
             </div>
           </div>
           <p>For visual work, I usually use the entire Adobe Collection, from Photoshop, Illustrator, InDesign to After Effects, Premiere and Animate. For Coding, I usually rely on the Jetbrains
