--- a/src/code/code.component.html
+++ b/src/code/code.component.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-md-3">
         <a href="https://github.com/Zmote" target="_blank">
-        <img class="thumbnail-image" src="../assets/img/github.png">
+        <img class="thumbnail-image" [src]="baseHref + 'github.png'">
         </a>
       </div>
       <div class="col-md-9 align-self-center">
@@ -27,7 +27,7 @@
     <div class="row">
       <div class="col-md-3">
         <a href="http://it-club-oberland.ch/" target="_blank">
-        <img class="thumbnail-image" src="../assets/img/pages/itclub_page.png">
+        <img class="thumbnail-image" [src]="baseHref + 'pages/itclub_page.png'">
         </a>
       </div>
       <div class="col-md-9 align-self-center">
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="col-md-3">
         <a href="/" target="_blank">
-        <img class="thumbnail-image" src="../assets/img/pages/z-motions.png">
+        <img class="thumbnail-image" [src]="baseHref + 'pages/z-motions.png'">
         </a>
       </div>
       <div class="col-md-9 align-self-center">
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="col-md-3">
         <a href="https://github.com/Zmote/SA---RAD-LogShark" target="_blank">
-        <img class="thumbnail-image" src="../assets/img/pages/main_view_multiWindow_colored_settings.png">
+        <img class="thumbnail-image" [src]="baseHref + 'pages/main_view_multiWindow_colored_settings.png'">
         </a>
       </div>
       <div class="col-md-9 align-self-center">
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-md-3">
         <a href="http://www.tomate-effretikon.ch/" target="_blank">
-        <img class="thumbnail-image" src="../assets/img/pages/restaurant_tomate.png">
+        <img class="thumbnail-image" [src]="baseHref + 'pages/restaurant_tomate.png'">
         </a>
       </div>
       <div class="col-md-9 align-self-center">
