--- a/src/contact/contact.component.html
+++ b/src/contact/contact.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row mx-auto">
       <div class="card col-md-2">
-        <img class="card-img-top" src="../assets/img/symbols/design_symbol.png" alt="Card image cap">
+        <img class="card-img-top" [src]="baseHref + 'symbols/design_symbol.png'" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">3D</h4>
           <p class="card-text">From Models, Props to Rigs and Scenes. For 3D Work, I charge:</p>
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="card col-md-2">
-        <img class="card-img-top" src="../assets/img/symbols/design_symbol.png" alt="Card image cap">
+        <img class="card-img-top" [src]="baseHref + 'symbols/design_symbol.png'" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">2D</h4>
           <p class="card-text">From Landscape Artwork, Comics, Paintings and Illustrations. For 2D Work, I charge:</p>
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="card col-md-2">
-        <img class="card-img-top" src="../assets/img/symbols/design_symbol.png" alt="Card image cap">
+        <img class="card-img-top" [src]="baseHref + 'symbols/design_symbol.png'" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Design</h4>
           <p class="card-text">From Flyers, Logos, Brochures to Webelements; Magazine Designs, Business Cards and UI Designs. For Design Work, I charge:</p>
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="card col-md-2">
-        <img class="card-img-top" src="../assets/img/symbols/design_symbol.png" alt="Card image cap">
+        <img class="card-img-top" [src]="baseHref + 'symbols/design_symbol.png'" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Concept</h4>
           <p class="card-text">From Character Development, Scene Concepts to Vehicle Prototypes. For any kind of conceptual work I charge:</p>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="card col-md-2">
-        <img class="card-img-top" src="../assets/img/symbols/design_symbol_s.png" alt="Card image cap">
+        <img class="card-img-top" [src]="baseHref + 'symbols/design_symbol_s.png'" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Coding</h4>
           <p class="card-text">I'm a professional software engineer. From Websites, Desktop Apps to Mobile Apps, I charge:</p>
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="card col-md-2">
-        <img class="card-img-top" src="../assets/img/symbols/design_symbol_w_v2.png" alt="Card image cap">
+        <img class="card-img-top" [src]="baseHref + 'symbols/design_symbol_w_v2.png'" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Animations</h4>
           <p class="card-text">From 3D Animations, 2D Animations to simple Logo Animations or animated elements of any kind. For Animation Work I charge:</p>
