--- a/src/infocards/infocards.component.html
+++ b/src/infocards/infocards.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
-           src="../assets/img/symbols/design_symbol.png"
+           [src]="baseHref + 'symbols/design_symbol.png'"
            alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Designing your visual needs</h4>
@@ -17,7 +17,7 @@
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
-           src="../assets/img/symbols/design_symbol_s.png"
+           [src]="baseHref + '/symbols/design_symbol_s.png'"
            alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Software solutions of all kind</h4>
@@ -29,7 +29,7 @@
   <div class="col-sm-4">
     <div class="card">
       <img class="card-img-top"
-           src="../assets/img/symbols/design_symbol_w_v2.png"
+           [src]="baseHref + '/symbols/design_symbol_w_v2.png'"
            alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">A flexible workhorse</h4>
