added animation section

--- a/src/footer/footer.component.html
+++ b/src/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom bg-dark footer">
+<footer class="fixed-bottom bg-dark footer d-none d-sm-block">
   <div class="container text-center">
     <span class="text-muted">Developed with <a href="https://angular.io/">Angular 4</a> by Zmote aka <a href="https://www.linkedin.com/in/zafer-dogan-20133186/">Zafer Dogan</a> &#9400;2017. All rights reserved.</span>
   </div>
