--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -10,25 +10,28 @@
         <a class="nav-link" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/3d">3D</a>
+        <a class="nav-link" routerLink="/3d" routerLinkActive="nav-active">3D</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/2d">2D</a>
+        <a class="nav-link" routerLink="/2d" routerLinkActive="nav-active">2D</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/design">Design</a>
+        <a class="nav-link" routerLink="/design" routerLinkActive="nav-active">Design</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/concept">Concept</a>
+        <a class="nav-link" routerLink="/concept" routerLinkActive="nav-active">Concept</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/code">Coding</a>
+        <a class="nav-link" routerLink="/code" routerLinkActive="nav-active">Coding</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/about">About</a>
+        <a class="nav-link" routerLink="/animation" routerLinkActive="nav-active">Animation</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/contact">Contact</a>
+        <a class="nav-link" routerLink="/about" routerLinkActive="nav-active">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/contact" routerLinkActive="nav-active">Contact</a>
       </li>
     </ul>
   </div>
