--- a/src/navigation/navigation.component.css
+++ b/src/navigation/navigation.component.css
@@ -8,6 +8,9 @@
   font-weight:bold;
   transform: scale(1.2);
 }
+.nav-active{
+  font-weight: bold;
+}
 
 @media (max-width: 768px){
   .nav-link:hover{
