last details added

--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -13,14 +13,34 @@
         <div class="mx-auto text-center text-justify">
           <img [src]="baseHref + 'portrait.jpg'" class="portrait mb-2">
           <h1>Who am I?</h1>
-          <p>Hi, my name is Zafer Dogan. I'm a 28 years old Software Engineer / Freelance Graphic Designer / Self-Taught Artist from Switzerland. Over the past ten years, I've had the opportunity
-          to build up a wide arrange of skills due to different projects I was involved in. I'm now in my last semester at the HSR and am in-between fulltime jobs, which is why I've setup this
-          portfolio / "services I offer" page to take on small to middle sized projects on the side. I'm very flexible with my time and can accommodate you from wherever you are. I'm looking forward to work with you.
+          <p>Hi, my name is Zafer Dogan. I'm a 28 years old Software Engineer / Freelance Graphic Designer / Self-Taught
+            Artist from Switzerland. Over the past ten years, I've had the opportunity
+            to build up a wide arrange of skills due to different projects I was involved in. I'm now in my last
+            semester at the HSR and am in-between fulltime jobs, which is why I've setup this
+            portfolio / "services I offer" page to take on small to middle sized projects on the side. I'm very flexible
+            with my time and can accommodate you from wherever you are. I'm looking forward to work with you.
           </p>
+          <h5> I'm also on</h5>
+          <div>
+            <div class="d-inline mx-2">
+              <span class="fa fa-facebook mr-2"></span><a href="https://www.facebook.com/Zmote89/" class="-link">Z-Mote from the
+              Z-Labs</a>
+            </div>
+            <div class="d-inline mx-2">
+              <span class="fa fa-deviantart mr-2"></span><a href="https://zmote.deviantart.com/">Zmote</a>
+            </div>
+            <div class="d-inline mx-2">
+              <span class="fa fa-twitter mr-2"></span><a href="https://twitter.com/zmotions">@zmotions</a>
+            </div>
+            <div class="d-inline mx-2">
+              <span class="fa fa-soundcloud mr-2"></span><a href="https://soundcloud.com/zmote">zmote</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+  <hr>
   <section class="container-fluid">
     <div class="row">
       <div class="col-md-12">
@@ -43,9 +63,11 @@
               <img [src]="baseHref + 'toolThumbs/clion.jpg'">
             </div>
           </div>
-          <p>For visual work, I usually use the entire Adobe Collection, from Photoshop, Illustrator, InDesign to After Effects, Premiere and Animate. For Coding, I usually rely on the Jetbrains
-          product family, from Webstorm, PHPStorm to IntelliJ IDEA, CLion and the sort. For 3D Work I usually use Autodesk Maya LT, Blender or Google SketchUP. I'm generally quick to leanr new software
-          as the need rises.</p>
+          <p>For visual work, I usually use the entire Adobe Collection, from Photoshop, Illustrator, InDesign to After
+            Effects, Premiere and Animate. For Coding, I usually rely on the Jetbrains
+            product family, from Webstorm, PHPStorm to IntelliJ IDEA, CLion and the sort. For 3D Work I usually use
+            Autodesk Maya LT, Blender or Google SketchUP. I'm generally quick to leanr new software
+            as the need rises.</p>
         </div>
       </div>
     </div>
