--- a/src/navigation/navigation.component.html
+++ b/src/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Z-Motions</a>
+  <a class="navbar-brand" href="">Z-Motions</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -22,10 +22,10 @@
         <a class="nav-link" routerLink="/concept" routerLinkActive="nav-active">Concept</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/code" routerLinkActive="nav-active">Coding</a>
+        <a class="nav-link" routerLink="/animation" routerLinkActive="nav-active">Animation</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/animation" routerLinkActive="nav-active">Animation</a>
+        <a class="nav-link" routerLink="/code" routerLinkActive="nav-active">Coding</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/about" routerLinkActive="nav-active">About</a>
