--- a/src/about/about.component.html
+++ b/src/about/about.component.html
@@ -23,17 +23,17 @@
           <h5> I'm also on</h5>
           <div>
             <div class="d-inline mx-2">
-              <span class="fa fa-facebook mr-2"></span><a href="https://www.facebook.com/Zmote89/" class="-link">Z-Mote from the
+              <span class="fa fa-facebook mr-2"></span><a href="https://www.facebook.com/Zmote89/" target="_blank">Z-Mote from the
               Z-Labs</a>
             </div>
             <div class="d-inline mx-2">
-              <span class="fa fa-deviantart mr-2"></span><a href="https://zmote.deviantart.com/">Zmote</a>
+              <span class="fa fa-deviantart mr-2"></span><a href="https://zmote.deviantart.com/" target="_blank">Zmote</a>
             </div>
             <div class="d-inline mx-2">
-              <span class="fa fa-twitter mr-2"></span><a href="https://twitter.com/zmotions">@zmotions</a>
+              <span class="fa fa-twitter mr-2"></span><a href="https://twitter.com/zmotions" target="_blank">@zmotions</a>
             </div>
             <div class="d-inline mx-2">
-              <span class="fa fa-soundcloud mr-2"></span><a href="https://soundcloud.com/zmote">zmote</a>
+              <span class="fa fa-soundcloud mr-2"></span><a href="https://soundcloud.com/zmote" target="_blank">zmote</a>
             </div>
           </div>
         </div>
